--- a/index.html
+++ b/index.html
@@ -6,12 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Rock Paper Scissors Game</title>
 </head>
 
 <body>
+    <h1>Fancy a game, stranger?</h1>
+    <p>These are the instructions for the game! look at this unordered list of possible wins!</p>
 
-    <script src="app.js"></script>
+    <div class="moves">
+        <label>
+            Rock
+        <img src="" class="radio-image">
+        <input
+        name="move"
+        value="rock"
+        type="radio">
+        </label>
+
+        <label>
+            Paper
+        <img src="" class="radio-image">
+        <input
+        name="move"
+        value="paper"
+        type="radio">
+        </label>
+        <label>
+            Scissors
+        <img src="" class="radio-image">
+        <input
+        name="move"
+        value="scissors"
+        type="radio">
+        </label>
+    </div>
+
+    <div>
+        <button id="my-button">Play!</button>
+    </div>
+
+    <div id="win-record" class="hidden">
+        Here is my win loss draw record
+    </div>
+
+    <div id="last-game" class="hidden">
+        Opponent's image
+        Result image for win, loss, draw starts hidden
+    </div>
+
+
+    <script src="app.js" type="module"></script>
 </body>
 
 </html>
