refactoring ui function code

--- a/index.html
+++ b/index.html
@@ -63,12 +63,15 @@
     </div>
 
     <div id="first-game" class="hidden">
-
-
-
-        
-        Opponent's image
-        Result image for win, loss, draw starts hidden
+        <div>
+            <img id="my-throw" src="https://66.media.tumblr.com/60a8c43713bcf37238cb6f10beb0b69a/tumblr_oqrugxEfeP1w924ygo1_500.gifv">
+        </div>
+        <div>
+            <img id="their-throw" src="https://66.media.tumblr.com/60a8c43713bcf37238cb6f10beb0b69a/tumblr_oqrugxEfeP1w924ygo1_500.gifv">
+        </div>
+        <div>
+            <img id="result-image" src="https://66.media.tumblr.com/60a8c43713bcf37238cb6f10beb0b69a/tumblr_oqrugxEfeP1w924ygo1_500.gifv">
+        </div>
     </div>
 
 
