finalized display refactoring

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <h1>Fancy a game, stranger?</h1>
+    <img size=300px height=300px src="https://images.freeimages.com/images/large-previews/336/rock-paper-scissors-1238146.jpg">
     <p> Remember!
         <ul>
             <li>Paper beats Rock</li>
@@ -63,15 +64,15 @@
     </div>
 
     <div id="first-game" class="hidden">
-        <div>
-            <img id="my-throw" src="https://66.media.tumblr.com/60a8c43713bcf37238cb6f10beb0b69a/tumblr_oqrugxEfeP1w924ygo1_500.gifv">
-        </div>
-        <div>
-            <img id="their-throw" src="https://66.media.tumblr.com/60a8c43713bcf37238cb6f10beb0b69a/tumblr_oqrugxEfeP1w924ygo1_500.gifv">
-        </div>
-        <div>
-            <img id="result-image" src="https://66.media.tumblr.com/60a8c43713bcf37238cb6f10beb0b69a/tumblr_oqrugxEfeP1w924ygo1_500.gifv">
-        </div>
+        <span>
+            <img height=200px width=200px id="my-throw" src="">
+        </span>
+        <span>
+            <img height=200px width=200px id="their-throw" src="">
+        </span>
+        <span>
+            <img height=200px width=200px id="result-image" src="">
+        </span>
     </div>
 
 
