working on bet function

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
             <li><b>Scissors</b> beats <b>Paper</b></li>
         </ul>
     </p>
-
+    <div>
+        <p>You Have <span id = 'bank'>20</span>$</p>
+        <p><input id= 'bet-value' type='number' min='1' max='25' value='1'></p>
+    </div>
     <div class="moves instructions">
         <label>
         <img src="https://images.freeimages.com/images/large-previews/a62/ching-chong-cha-2-1440527.jpg" class="radio-image">
